- `item`: add ``--verbose`` option to print each item as it is matched
- `gui/mod-manager`: will automatically unmark the default mod profile from being the default if it fails to load (due to missing or incompatible mods)

## Removed
- `gui/manager-quantity`: the vanilla UI can now modify manager order quantities after creation
- `gui/create-tree`: replaced by `gui/sandbox`
- `warn-starving`: combined into `gui/notify`
- `warn-stealers`: combined into `gui/notify`

# 50.11-r6

## Fixes
- `makeown`: fix error when adopting units that need a historical figure to be created
- `item`: fix missing item categories when using ``--by-type``

# 50.11-r5

## New Tools
- `control-panel`: new commandline interface for control panel functions
- `uniform-unstick`: (reinstated) force squad members to drop items that they picked up in the wrong order so they can get everything equipped properly
- `gui/reveal`: temporarily unhide terrain and then automatically hide it again when you're ready to unpause
- `gui/teleport`: mouse-driven interface for selecting and teleporting units
- `gui/biomes`: visualize and inspect biome regions on the map
- `gui/embark-anywhere`: bypass those pesky warnings and embark anywhere you want to
- `item`: perform bulk operations on groups of items.

## New Features
- `uniform-unstick`: add overlay to the squad equipment screen to show a equipment conflict report and give you a one-click button to (attempt to) fix
- `gui/settings-manager`: save and load embark difficulty settings and standing orders; options for auto-load on new embark

## Fixes
- `source`: water and magma sources and sinks now persist with fort across saves and loads
- `gui/design`: fix incorrect dimensions being shown when you're placing a stockpile, but a start coordinate hasn't been selected yet
- `warn-stranded`: don't warn for citizens who are only transiently stranded, like those on stepladders gathering plants or digging themselves out of a hole