@@ -118,15 +118,6 @@ Command options
     don't actually change any game state.
 ``-m``, ``--marker``
     Use marker mode for the ``#dig`` blueprint that you are applying.
-``--order-materials <spec>``
-    When generating manager orders, use materials according to the given spec
-    instead of the default "rock,wood,cloth,iron". Valid values are: rock, wood,
-    cloth, silk, yarn, leather, glass, and the names of any metals. You can
-    additionally override the materials preference for specific types of items
-    by adding comma-separated elements to the spec in the format
-    ``<type>=<material``. For example, ``BOX=leather`` will produce leather bags
-    instead of the default rock coffers when a container is specified on a
-    blueprint.
 ``-p``, ``--priority <num>``
     Set the priority to the given number (1-7) for tiles designated by the
     ``#dig`` blueprint that you are applying. That is, tiles that normally have
@@ -237,6 +228,12 @@ statistics structure is a map of stat ids to ``{label=string, value=number}``.
 ``aliases``
     A map of blueprint alias names to their expansions. If not specified,
     defaults to ``{}``.
+``marker``
+    A boolean indicating whether this ``dig`` mode blueprint should be applied
+    in marker mode. If not specified, defaults to ``false``.
+``priority``
+    An integer between ``1`` and ``7``, inclusive, indicating the base priority
+    for this ``dig`` blueprint. If not specified, defaults to ``4``.
 ``preserve_engravings``
     Don't designate tiles for digging or carving if they have an engraving with
     at least the specified quality. Value is a ``df.item_quality`` enum name or
